BUG: v4skin | styles -> when loading widgets, overflow is hidden. avoids flickering scroll bars for some browsers. ART#0002032

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -1430,8 +1430,11 @@ footer {
                 .content {
                     margin-top: -8px;
                     padding-top: 8px;
-                    overflow-x: auto;
                     max-height: 500px;
+
+                    &.loaded {
+                        overflow-x: auto;
+                    }
                 }
 
                 &.sortActive {
